--- a/package.json
+++ b/package.json
@@ -1,24 +1,46 @@
 {
-  "name": "whitelabel-demo",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.1"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
-  }
+    "name": "whitelabel-demo",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "dev": "next dev --turbopack",
+        "lint-biome": "biome check .",
+        "lint-fix": "biome check --write .",
+        "precommit": "lint-staged",
+        "prepare": "husky"
+    },
+    "dependencies": {
+        "@radix-ui/react-accordion": "^1.2.8",
+        "@radix-ui/react-label": "^2.1.4",
+        "@radix-ui/react-scroll-area": "^1.2.6",
+        "@radix-ui/react-select": "^2.2.2",
+        "@radix-ui/react-separator": "^1.1.4",
+        "@radix-ui/react-slot": "^1.2.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.503.0",
+        "next": "15.3.1",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "tailwind-merge": "^3.2.0"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "^1.9.4",
+        "@tailwindcss/postcss": "^4.1.4",
+        "@types/node": "^22.15.2",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
+        "env-cmd": "^10.1.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^15.5.1",
+        "tailwindcss": "^4.1.4",
+        "tw-animate-css": "^1.2.8",
+        "typescript": "^5.8.3"
+    },
+    "lint-staged": {
+        "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": ["biome check --write --no-errors-on-unmatched"]
+    }
 }
