--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@internationalized/date": "^3.8.0",
         "@radix-ui/react-accordion": "^1.2.8",
         "@radix-ui/react-dialog": "^1.1.11",
+        "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/react-label": "^2.1.4",
         "@radix-ui/react-navigation-menu": "^1.2.10",
         "@radix-ui/react-popover": "^1.1.11",
@@ -22,15 +24,22 @@
         "@radix-ui/react-select": "^2.2.2",
         "@radix-ui/react-separator": "^1.1.4",
         "@radix-ui/react-slot": "^1.2.0",
+        "axios": "^1.9.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.503.0",
         "next": "15.3.1",
+        "nuqs": "^2.4.3",
         "react": "^19.1.0",
+        "react-aria-components": "^1.8.0",
         "react-day-picker": "8.10.1",
         "react-dom": "^19.1.0",
-        "tailwind-merge": "^3.2.0"
+        "react-responsive": "^10.0.1",
+        "sonner": "^2.0.3",
+        "tailwind-merge": "^3.2.0",
+        "use-debounce": "^10.0.4"
     },
     "devDependencies": {
         "@biomejs/biome": "^1.9.4",
